package cn.edu.ncepu.sa.Model;

public enum Terrain {
    GRASS,RIVER,PLAINS
}
